OPTION(NODEJS "Build Node.js Bindings" OFF)
IF(NODEJS)
  LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/node_modules/node-cmake)
  FIND_PACKAGE(NodeJS)
  ADD_NODEJS_MODULE(node-osrm src/node_osrm.cpp)
  TARGET_LINK_LIBRARIES(node-osrm osrm ${Boost_LIBRARIES} ${OPTIONAL_SOCKET_LIBS} ${ZLIB_LIBRARY})
  MESSAGE(STATUS "Node.js include path: ${NodeJS_INCLUDE_PATHS}")
  MESSAGE(STATUS "Node.js libraries: ${NodeJS_LIBRARIES}")
ENDIF()
